Some fixes to responsive theme tables on smaller resolutions.

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -4716,14 +4716,13 @@ li#moremenu {
 	and also iPads specifically.
 	*/
 @media
-only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px)  {
+only screen and (max-width: 760px)
+ {
 
     /* Force table to not be like tables anymore */
     table, thead, tbody, th, td, tr {
         display: block;
         background:none;
-        border-bottom:1px solid #cccccc;
     }
 tr,.detail508 tr td[scope="col"],.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td,.detail tr td,.detail table, table.detail {
     background:none;
@@ -4731,21 +4730,8 @@ tr,.detail508 tr td[scope="col"],.table > thead > tr > th, .table > tbody > tr >
     }
 }
 
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
-    body {
-        padding: 0;
-        margin: 0;
-        width: 320px; }
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-    body {
-        width: 495px;
-    }
+tr {
+    border-bottom:1px solid #cccccc;
 }
 
 /* End Global CSS */
